--- a/profiles/openasu/themes/college/sass/college.media-rules.scss
+++ b/profiles/openasu/themes/college/sass/college.media-rules.scss
@@ -49,6 +49,7 @@
       display: flex;
       border-radius: 0;
       overflow-y: hidden;
+      flex-wrap: nowrap;
     }
   }
   //
